--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lamdash.list",
+  "name": "lambdash.list",
   "version": "0.5.0",
   "description": "List data type for lamdash",
   "main": "src/List.js",
@@ -8,6 +8,7 @@
   },
   "author": "Mark Wardle <mwwardle@gmail.com>",
   "license": "MIT",
+  "repository": "https://github.com/mwardle/lambdash.list.git",
   "dependencies": {
     "lambdash": "^0.5.3"
   }
